--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                         “Cozy House”</h3>
                     <div class="about__content-text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce efficitur blandit condimentum.
-                            Proin accumsan lorem vel gravida fringilla. Suspendisse potenti. Mauris ut pulvinar nunc.
+                            Proin accumsan lorem vel gravida fringilla. Suspendisse potenti. Mauris ut pulvinar nunc
+                            nunc.
                         </p>
                         <p>Donec consectetur, diam in porta tempus, urna ligula vestibulum nibh, ac ornare felis justo
                             nec
