--- a/index.html
+++ b/index.html
@@ -21,20 +21,25 @@
                     <span class="logo__location">Shelter for pets in Boston</span>
                 </a>
                 <div class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">About the shelter</a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">Our pets</a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">To help the shelter</a>
-                        </li>
-                        <li class="menu__list-item">
-                            <a class="menu__list-link" href="">Contacts</a>
-                        </li>
-                    </ul>
+                    <div class="menu__icon">
+                        <span></span>
+                    </div>
+                    <div class="menu__body _active">
+                        <ul class="menu__list">
+                            <li class="menu__list-item">
+                                <a data-goto=".about" class="menu__list-link" href="#">About the shelter</a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a data-goto=".friends" class="menu__list-link" href="#">Our pets</a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a data-goto=".help" class="menu__list-link" href="#">To help the shelter</a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a data-goto=".footer" class="menu__list-link" href="#">Contacts</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
