--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="menu__icon">
                         <span></span>
                     </div>
-                    <div class="menu__body _active">
+                    <div class="menu__body">
                         <ul class="menu__list">
                             <li class="menu__list-item">
                                 <a data-goto=".about" class="menu__list-link" href="#">About the shelter</a>
