--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <p class="help__item-text">Pet food</p>
                     </div>
                     <div class="help__item">
-                        <img class="help__item-image" src="images/help_transport.png" alt="">
+                        <img class="help__item-image" src="images/help_transport.png" width="60" height="58" alt="">
                         <p class="help__item-text">Transportation</p>
                     </div>
                     <div class="help__item">
